--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@ It is important to note that the Dutch celebration of Sinterklaas has undergone 
            <h3 class="text-xl font-serif font-semibold mb-4 text-primary dark:text-secondary">References</h3>
            <ul class="text-sm space-y-3 text-accent dark:text-neutral-200">
                <li>Cheng, A., Calhoun, A., &amp; Reedy, G. (2025). Artificial intelligence-assisted academic writing: recommendations for ethical use. <em>Advances in Simulation, 10</em>(1), 22. https://doi.org/10.1186/s41077-025-00350-6</li>
-               <li>Oliveira, M. B. (2025). CARe framework for responsible academic writing assisted by Generative AI. <em>SEFI Summer School</em>.</li>
+               <li>Oliveira, M. B. (2025). CARefully prompt your AI: A prompt library for AI-assisted academic writing with ethical guidance (Version 1.0.0) [Computer software]. Zenodo. <a href="https://doi.org/10.5072/zenodo.259251" class="text-primary dark:text-secondary hover:underline">https://doi.org/10.5072/zenodo.259251</a></li>
            </ul>
        </div>
 
