updated content of tools section

--- a/index.html
+++ b/index.html
@@ -3190,16 +3190,20 @@ I'm conducting interviews with participants in controversial Dutch cultural fest
                         </a>
                     </div>
                     
-                    <div class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm">
-                        <h4 class="font-semibold text-primary dark:text-secondary mb-2">Manus</h4>
-                        <p class="text-sm text-accent dark:text-neutral-300 mb-2">Research assistant for finding and organizing academic sources</p>
-                        <a href="https://manus.im/" target="_blank" class="text-sm text-primary dark:text-secondary hover:underline inline-flex items-center">
-                            Visit site
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                            </svg>
-                        </a>
-                    </div>
+                <div class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm">
+                    <h4 class="font-semibold text-primary dark:text-secondary mb-2">SciSpace</h4>
+                    <p class="text-sm text-accent dark:text-neutral-300 mb-2">AI-powered research platform for finding, understanding,
+                        and organizing academic sources</p>
+                    <a href="https://scispace.com/" target="_blank"
+                        class="text-sm text-primary dark:text-secondary hover:underline inline-flex items-center">
+                        Visit site
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                        </svg>
+                    </a>
+                </div>
                     
                     <div class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm">
                         <h4 class="font-semibold text-primary dark:text-secondary mb-2">Deep Research (Gemini)</h4>
