--- a/index.html
+++ b/index.html
@@ -288,22 +288,23 @@
 
                     <!-- Tools & Resources Link -->
                     <div class="text-center mb-8">
-                        <button class="category-card inline-block max-w-md border-2 border-primary/20 hover:border-primary/40"
+                        <button
+                            class="bg-primary/10 dark:bg-primary/20 rounded-2xl p-6 shadow-sm hover:shadow-md transition-all duration-300 hover:bg-primary/15 dark:hover:bg-primary/25 inline-block max-w-md"
                             onclick="showCategory('tools')">
-                            <div class="flex items-center justify-center mb-3">
+                            <div class="flex items-center justify-center mb-4">
                                 <!-- Tools Icon: Cog -->
-                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mr-2 text-primary dark:text-secondary" fill="none"
+                                <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 mr-3 text-primary dark:text-secondary" fill="none"
                                     viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 </svg>
-                                <h3 class="text-xl font-serif font-semibold text-primary dark:text-secondary">Tools & Resources</h3>
+                                <h3 class="text-2xl font-serif font-semibold text-primary dark:text-secondary">Tools & Resources</h3>
                             </div>
-                            <p class="text-sm text-accent dark:text-neutral-300">Recommended AI tools and resources for each CARe stage.</p>
+                            <p class="text-sm text-accent dark:text-neutral-300">AI tools and resources for each CARe stage.</p>
                             <!-- Small cherry blossom decoration -->
-                            <div class="flex justify-end mt-3">
+                            <div class="flex justify-end mt-4">
                                 <span class="text-secondary text-xs">● ● ●</span>
                             </div>
                         </button>
